--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/nav_events"
-        android:icon="@drawable/ic_event"
+        android:icon="@android:drawable/ic_menu_agenda"
         android:title="Events" />
 
     <item
         android:id="@+id/nav_create"
-        android:icon="@drawable/ic_create"
-        android:title="Create Event" />
+        android:icon="@android:drawable/ic_input_add"
+        android:title="Create" />
 
     <item
         android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
+        android:icon="@android:drawable/ic_menu_preferences"
         android:title="Settings" />
 
 </menu>
