--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.EventPlanner" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Theme.EventPlanner.Dark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryVariant">@color/blue_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/teal_200</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/blue_dark</item>
+        <item name="android:navigationBarColor">@color/black</item>
+        <item name="android:windowBackground">@color/black</item>
+
+
+
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="textAppearanceHeadline1">@style/Text.White</item>
+        <item name="textAppearanceHeadline2">@style/Text.White</item>
+        <item name="textAppearanceBody1">@style/Text.White</item>
+        <item name="textAppearanceBody2">@style/Text.White</item>
+        <item name="textAppearanceSubtitle1">@style/Text.White</item>
+        <item name="textAppearanceSubtitle2">@style/Text.White</item>
+    </style>
+
+    <style name="Text.White" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
