--- a/app/src/main/res/layout/event_form.xml
+++ b/app/src/main/res/layout/event_form.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
@@ -71,6 +72,25 @@
             android:inputType="textEmailAddress"
             android:layout_marginBottom="12dp" />
 
+        <TextView
+            android:id="@+id/tvDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Select date"
+            android:padding="12dp"
+            android:background="?android:attr/editTextBackground"
+            android:layout_marginBottom="12dp"/>
+
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Select time"
+            android:padding="12dp"
+            android:background="?android:attr/editTextBackground"
+            android:layout_marginBottom="12dp"/>
+
+
         <Button
             android:id="@+id/buttonSubmit"
             android:layout_width="match_parent"
@@ -79,5 +99,14 @@
             android:textColor="?android:textColorPrimary"
             android:textColorHint="?android:textColorHint"
             android:backgroundTint="@color/blue" android:textAllCaps="false" />
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/admob_banner_unit_id"
+            android:layout_marginTop="16dp"/>
+
     </LinearLayout>
 </ScrollView>
